--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,25 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+.vscode
+dist
 
-# testing
-/coverage
+# Node dependencies
+node_modules
 
-# next.js
-/.next/
-/out/
+# Logs
+logs
+*.log
 
-# production
-/build
-
-# misc
+# Misc
 .DS_Store
-*.pem
+.fleet
+.idea
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Local env files
+.env
+.env.*
+!.env.example
