--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/google-fonts": "3.2.0",
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/motion": "^2.2.6",
     "nuxt": "^3.14.1592",
     "radix-vue": "^1.9.11",
-    "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "postcss": "^8.4.49",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "^3.5.13"
   }
 }
